add user vehicles and preferences
